--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,6 +13,10 @@
         android:title="@string/action_search"
         app:showAsAction="always" />
     <item
+        android:id="@+id/action_account"
+        android:title="@string/action_account"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_map"
         android:icon="@drawable/ic_map_white_24dp"
         android:title="@string/action_weather_map"
@@ -25,6 +29,7 @@
         android:id="@+id/action_location"
         android:title="@string/setting_auto_detect_location"
         app:showAsAction="never" />
+
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
