--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/progressBar"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_gravity="center|bottom"
+        android:layout_gravity="center"
         android:layout_marginBottom="20dp"
         android:visibility="gone" />
 
@@ -96,28 +96,32 @@
             android:textColor="@color/white"
             android:textSize="15sp" />
 
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/google_Login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/title_activity_login"
-            android:visibility="visible"
-            android:layout_weight="1.26" />
-        <Button
-            android:id="@+id/sign_in_button"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:text="@string/title_activity_login"
-            android:visibility="visible"
-            android:layout_weight="1.26" />
+        <LinearLayout
+            android:layout_width="229dp"
+            android:layout_height="wrap_content">
 
-        <com.facebook.login.widget.LoginButton
-            android:id="@+id/facebook_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="30dp"
-            android:layout_marginTop="30dp" />
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/google_Login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|start"
+                android:layout_weight="1"
+                android:text="@string/title_activity_login"
+                android:visibility="visible" />
+
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/facebook_login"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="end"
+                android:layout_weight="1"
+                android:paddingBottom="14dp"
+                android:paddingTop="11dp"
+                android:visibility="visible"
+                app:com_facebook_login_text="@string/title_activity_login" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
