--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -43,7 +43,7 @@
                         android:id="@+id/todayTemperature"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0 °C"
+                        android:text="0 °K"
                         android:textColor="@android:color/white"
                         android:textSize="36dp" />
 
