--- a/app/src/main/res/layout/extensive_widget.xml
+++ b/app/src/main/res/layout/extensive_widget.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/widgetTemperature"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="0 °C"
+                tools:text="0 °K"
                 android:textColor="@android:color/white"
                 android:textSize="36sp" />
 
