--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,6 +17,10 @@
         android:title="@string/action_account"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_friendlist"
+        android:title="@string/action_friendlist"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_map"
         android:icon="@drawable/ic_map_white_24dp"
         android:title="@string/action_weather_map"
@@ -29,6 +33,7 @@
         android:id="@+id/action_location"
         android:title="@string/setting_auto_detect_location"
         app:showAsAction="never" />
+
 
     <item
         android:id="@+id/action_settings"
